Display correctly additional location information in vacancies with addresses with 5 or more lines.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
@@ -236,7 +236,8 @@
 
                 @if (!string.IsNullOrWhiteSpace(Model.AdditionalLocationInformation))
                 {
-                    <div class="editable-item">
+                    <div class="grid text">
+                        <p></p>
                         <h3 class="bold-small">
                             Additional location information
                         </h3>
