RA-26 fixing the delete action and retaining the search filters when redirecting to the dashboard

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/Delete.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/Delete.cshtml
@@ -20,7 +20,12 @@
 {
     <div>You will not be able to retreive this vacancy once it has been deleted</div>
     <div class="grid grid-1-1">
+        @foreach (var prop in Model.GetType().GetProperties())
+        {
+            var getter = prop.GetGetMethod();
+            @Html.Hidden(prop.Name, getter.Invoke(Model, new object[] {}));
+        }
         <button class="button" id="confirmDeleteVacancy" name="ConfirmDeleteVacancy" value="ConfirmDeleteVacancy">Confirm and return to recruitment home</button>
-        @Html.RouteLink("Cancel",  RecruitmentRouteNames.RecruitmentHome, Model as VacanciesSummarySearchViewModel)
+        @Html.RouteLink("Cancel", RecruitmentRouteNames.RecruitmentHome, Model as VacanciesSummarySearchViewModel)
     </div>
 }
