ra88: simplified wage unit header display text on FurtherDetailsViewModel

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
@@ -40,7 +40,7 @@
             @if (Model.FurtherVacancyDetailsViewModel.WageType == WageType.Custom)
             {
                 <span>
-                    @Model.FurtherVacancyDetailsViewModel.WageUnitDisplayText
+                    @Model.FurtherVacancyDetailsViewModel.WageUnit.GetHeaderDisplayText()
                     @Html.Partial(ValidationResultViewModel.PartialView, Html.GetValidationResultViewModel(Model, m => m.FurtherVacancyDetailsViewModel.WageType, ViewData.ModelState, Model.SummaryLink, Model.FurtherVacancyDetailsViewModel.WageComment))
                 </span>
             }
