--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/Delete.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/Delete.cshtml
@@ -5,27 +5,26 @@
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Delete a draft vacancy";
-
+    var vacancyTitle = string.IsNullOrEmpty(Model.VacancyTitle) ? "(No Title)" : Model.VacancyTitle;
 }
 
-<div class="grid-wrapper">
-    <div class="hgroup">
-        <h1 class="heading-xlarge">
-            Delete @Model.VacancyTitle vacancy
-        </h1>
-    </div>
-</div>
+<h1 class="heading-xlarge">
+    Delete @vacancyTitle vacancy
+</h1>
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.DeleteVacancy, FormMethod.Post))
 {
-    <div>You will not be able to retreive this vacancy once it has been deleted</div>
-    <div class="grid grid-1-1">
-        @foreach (var prop in Model.GetType().GetProperties())
-        {
-            var getter = prop.GetGetMethod();
-            @Html.Hidden(prop.Name, getter.Invoke(Model, new object[] {}));
-        }
-        <button class="button" id="confirmDeleteVacancy" name="ConfirmDeleteVacancy" value="ConfirmDeleteVacancy">Confirm and return to recruitment home</button>
-        @Html.RouteLink("Cancel", RecruitmentRouteNames.RecruitmentHome, Model as VacanciesSummarySearchViewModel)
+    <div>
+        <p>You will not be able to retreive this vacancy once it has been deleted</p>
+        <div class="grid grid-1-1">
+            @foreach (var prop in Model.GetType().GetProperties())
+            {
+                var getter = prop.GetGetMethod();
+                @Html.Hidden(prop.Name, getter.Invoke(Model, new object[] { }))
+                ;
+            }
+            <button class="button" id="confirmDeleteVacancy" name="ConfirmDeleteVacancy" value="ConfirmDeleteVacancy">Confirm and return to recruitment home</button>
+            @Html.RouteLink("Cancel", RecruitmentRouteNames.RecruitmentHome, Model as VacanciesSummarySearchViewModel)
+        </div>
     </div>
 }
