--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -283,3 +283,7 @@ table#rightLocationAddressesTable{
     margin-bottom:15px;
     display:block;
 }
+
+.delete-vacancy-link{
+    margin-left: 10px;
+}
