--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
@@ -10,7 +10,7 @@
     </p>
 </div>
 
-@if (Model.WageType == LegacyWageType.ApprenticeshipMinimum)
+@if (Model.WageType == WageType.ApprenticeshipMinimum)
 {
     <details>
         <summary>Wages explained</summary>
@@ -22,7 +22,7 @@
     </details>
 }
 
-@if (Model.WageType == LegacyWageType.NationalMinimum)
+@if (Model.WageType == WageType.NationalMinimum)
 {
     <details>
         <summary>Wages explained</summary>
