ra88: removed VacancyDetailViewModel.WageUnit

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
@@ -4,7 +4,7 @@
 @model ApprenticeshipVacancyDetailViewModel
 
 <div>
-    <h3 class="bold-small">@Model.WageUnit.GetHeaderDisplayText()</h3>
+    <h3 class="bold-small">@Model.WageObject.Unit.GetHeaderDisplayText()</h3>
     <p id="vacancy-wage">
         @Model.Wage
     </p>
