major refactor in moving files to its appropriate places and adding proper references.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Web.Mvc.Html
-@using SFA.Apprenticeships.Application.Applications.Extensions
+@using SFA.Apprenticeships.Application.Application.Extensions
 @using SFA.Apprenticeships.Domain.Entities.Applications
 @using SFA.Apprenticeships.Domain.Entities.Vacancies
 @using SFA.Apprenticeships.Web.Candidate.ViewModels.MyApplications
